--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,1 +1,9 @@
-/* В этом файле будут храниться все значения переменных в исходном состоянии, а так же их изменения в зависимости от ширины устройства */
+:root {
+    --font-main: "Inter-Variable";
+    --font-accent: "PressStart2P";
+    --font-normal: 400;
+    --font-bold: 700;
+    --color-bg: #ffffff;
+    --color-accent: #000000;
+    --color-heart-fill: #ff0000;
+}
