--- a/styles/themes.css
+++ b/styles/themes.css
@@ -4,3 +4,17 @@
 ✦ theme-light — класс светлой темы
 ✦ не забудьте описать стили для изменения темы через медизапрос пользовательских предпочтений
 */
+
+:root.theme-light {
+    --font-normal: 400;
+    --font-bold: 700;
+    --color-bg: #ffffff;
+    --color-accent: #000000;
+}
+
+:root.theme-dark {
+    --font-normal: 465;
+    --font-bold: 785;
+    --color-bg: #000000;
+    --color-accent: #00CC14;
+}
