--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,9 +1,23 @@
 :root {
+    --page-size: min(100%, 700px);
     --font-main: "Inter-Variable";
     --font-accent: "PressStart2P";
     --font-normal: 400;
     --font-bold: 700;
     --color-bg: #ffffff;
     --color-accent: #000000;
+    --color-button-text: #ffffff;
     --color-heart-fill: #ff0000;
+    --color-background: #000000;
+    --gradient-line-first: #dcdcdc;
+    --gradient-line-second: #d3d3d300;
+    --gradient-full-start: #e7e7e7;
+    --gradient-full-end: #1a1a1a;
+    --animation-time: 0.3s;
+    --animation-duration: 0.5s;
+    --image-bg:
+        repeating-linear-gradient(to right, var(--gradient-line-first) 0 2px, var(--gradient-line-second) 2px 4px),
+        repeating-linear-gradient(to bottom, var(--gradient-line-first) 0 2px, var(--gradient-line-second) 2px 4px),
+        linear-gradient(to bottom, var(--gradient-full-start) 0.01%, var(--gradient-full-end));
 }
+
