--- a/styles/variables.css
+++ b/styles/variables.css
@@ -8,7 +8,7 @@
     --color-accent: #000000;
     --color-button-text: #ffffff;
     --color-heart-fill: #ff0000;
-    --color-background: #000000;
+    --color-backdrop: #000000;
     --gradient-line-first: #dcdcdc;
     --gradient-line-second: #d3d3d300;
     --gradient-full-start: #e7e7e7;
