--- a/styles/animations.css
+++ b/styles/animations.css
@@ -12,3 +12,17 @@
 
 Кроме этого, не меняйте HTML переключателя тем. Его разметка также гарантирует работу своего скрипта.
 */
+
+.theme-menu__button:disabled::before {
+    animation: arrow var(--animation-duration) ease-in-out infinite alternate;
+}
+
+@keyframes arrow {
+    from {
+        left: -20px;
+    }
+
+    to {
+        left: -16px;
+    }
+}
