--- a/styles/style.css
+++ b/styles/style.css
@@ -278,7 +278,7 @@
   }
 }
 
-.like-icon:hover .body {
+.like-icon:hover .core {
   fill: var(--color-accent, #000000);
   transition: fill var(--animation-time, 0.3s) ease;
 }
@@ -288,7 +288,7 @@
   transition: fill var(--animation-time, 0.3s) 0.05s ease;
 }
 
-.like-icon:active .body {
+.like-icon:active .core {
   fill: var(--color-heart-fill, #ff0000);
   transition: fill var(--animation-time, 0.3s) ease;
 }
@@ -298,7 +298,7 @@
   transition: fill var(--animation-time, 0.3s) 0.05s ease;
 }
 
-.like-icon.is-liked .body {
+.like-icon.is-liked .core {
   fill: var(--color-heart-fill, #ff0000);
   transition: fill var(--animation-time, 0.3s) ease;
 }
@@ -319,7 +319,7 @@
 }
 
 /*hide sparks*/
-.lights {
+.sparks{
   opacity: 0;
 }
 
