--- a/styles/animations.css
+++ b/styles/animations.css
@@ -13,6 +13,8 @@
 Кроме этого, не меняйте HTML переключателя тем. Его разметка также гарантирует работу своего скрипта.
 */
 
+/*animation arrow*/
+
 .theme-menu__button:disabled::before {
     animation: arrow var(--animation-duration) ease-in-out infinite alternate;
 }
@@ -26,6 +28,8 @@
         left: -16px;
     }
 }
+
+/*animation heart*/
 
 .like-icon.is-liked .heart {
     animation: heart var(--animation-time) ease-in 0.1s 2 alternate;
